<resources>
    <string name="app_name">8.dip</string>
    <string name="enterPin">Введите пин-код</string>
    <string name="textViewButton1">1</string>
    <string name="textViewButton2">2</string>
    <string name="textViewButton3">3</string>
    <string name="textViewButton4">4</string>
    <string name="textViewButton5">5</string>
    <string name="textViewButton6">6</string>
    <string name="textViewButton7">7</string>
    <string name="textViewButton8">8</string>
    <string name="textViewButton9">9</string>
    <string name="textViewButton0">0</string>
    <string name="textViewBackSpace"><![CDATA[<]]></string>
    <string name="action_settings">Настройки</string>
    <string name="action_save_note">Сохранить</string>
    <string name="save">Сохранить</string>
    <string name="action_back">Назад</string>
    <string name="headline">Заголовок</string>
    <string name="body">Основной текст заметки</string>
    <string name="hasDeadLine">Срок выполнения</string>
    <string name="textViewDeadLine">31.12.2019 23:59:59</string>
    <string name="SetDeadLineDay">Установите дату дедлайна</string>
    <string name="notes">Заметки</string>
    <string name="note">Заметка</string>
    <string name="EnterPin">Введите пин код</string>


</resources>
