<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEnterPin"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/textViewEnterPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/enterPin"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@android:drawable/btn_star_big_on" />


    <LinearLayout
        android:id="@+id/column0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LinearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewButton1"
                style="@style/FontTheme40"
                android:text="@string/textViewButton1" />

            <TextView
                android:id="@+id/textViewButton2"
                style="@style/FontTheme40"
                android:text="@string/textViewButton2" />

            <TextView
                android:id="@+id/textViewButton3"
                style="@style/FontTheme40"
                android:text="@string/textViewButton3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LinearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewButton4"
                style="@style/FontTheme40"
                android:text="@string/textViewButton4" />

            <TextView
                android:id="@+id/textViewButton5"
                style="@style/FontTheme40"
                android:text="@string/textViewButton5" />

            <TextView
                android:id="@+id/textViewButton6"
                style="@style/FontTheme40"
                android:text="@string/textViewButton6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LinearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewButton7"
                style="@style/FontTheme40"
                android:text="@string/textViewButton7" />

            <TextView
                android:id="@+id/textViewButton8"
                style="@style/FontTheme40"
                android:text="@string/textViewButton8" />

            <TextView
                android:id="@+id/textViewButton9"
                style="@style/FontTheme40"
                android:text="@string/textViewButton9" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LinearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewButton0"
                style="@style/FontTheme40"
                android:layout_weight="1"
                android:text="@string/textViewButton0" />

            <TextView
                android:id="@+id/textViewBackSpace"
                style="@style/FontTheme40"
                android:layout_weight="2"
                android:text="@string/textViewBackSpace" />
        </LinearLayout>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>