<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    tools:context=".NoteActivity">

    <EditText
        android:id="@+id/editTextHeadLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/headline"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/body"
        android:inputType="textMultiLine|textPersonName"
        android:lineHeight="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextHeadLine" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasDeadLine"
        app:layout_constraintStart_toStartOf="@+id/editTextBody"
        app:layout_constraintTop_toBottomOf="@+id/editTextBody" />

    <TextView
        android:id="@+id/textViewDeadLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewDeadLine"
        app:layout_constraintStart_toStartOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/textViewDeadLine"
        app:layout_constraintTop_toTopOf="@+id/textViewDeadLine"
        app:srcCompat="@android:drawable/ic_menu_day" />
</androidx.constraintlayout.widget.ConstraintLayout>